<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Payroll</string>
    <string name="overview">Settlement Overview</string>
    <string name="loads">Completed Loads</string>
    <string name="fuel">Fuel Purchases</string>
    <string name="fixed">Fixed Expenses</string>
    <string name="payout">Payouts/Maintenance</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="log_in_or_out_text">Log In</string>
    <string name="google_auth" translatable="false">27076318093-b9sjev7ge7bmch803mkhilsvj2m2jlrv.apps.googleusercontent.com</string>
    <string name="add">Add</string>
    <string name="total">Total:</string>
    <string name="new_settlement">New Settlement</string>
    <string name="pct_definition">*(PCT) Percent</string>
    <string name="cpm_definition">*(CPM) cents per mile</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="new_load_entry">New Load Entry</string>
    <string name="optional_note">Optional note</string>
    <string name="e">E:</string>
    <string name="current_odometer">Odometer Reading</string>
    <string name="include_any_additional_notes_you_would_like_to_add_here">include any additional notes you would like here</string>
    <string name="loaded">loaded</string>
    <string name="empty">empty</string>
    <string name="dollar_signs">$$$$</string>
    <string name="location_b">location B</string>
    <string name="location_a">location A</string>
    <string name="l">L:</string>
    <string name="reading">reading</string>
    <string name="pick_up_location">Pick-up Location</string>
    <string name="_2020">2020</string>
    <string name="_2018">2018</string>
    <string name="mileage">Mileage</string>
    <string name="agreed_rate">Agreed Rate</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="thru" tools:ignore="Typos"><![CDATA[<—thru—>]]></string>
    <string name="total_cost">Total Cost:</string>
    <string name="gallons">Gallons:</string>
    <string name="location">Location:</string>
    <string name="_123456">123456</string>
    <string name="_123">123</string>
    <string name="chicago_il">Chicago, Il</string>
    <string name="new_fuel_entry">New Fuel Entry</string>
    <string name="identification">identification</string>
    <string name="truck">Truck</string>
    <string name="trailer">Trailer</string>
    <string name="carry_over_fixed_exspenses">Carry over fixed expenses</string>
    <string name="create_new_settlement">New Settlement</string>
    <string name="miscellaneous_cost">Miscellaneous Cost</string>
    <string name="description">Description</string>
    <string name="cost">Cost</string>
    <string name="item_label">Item Label</string>
    <string name="fixed_note">Include expenses that reacur such as equipment, insurance, etc</string>
    <string name="misc_note">include one-time expenses such as washes, scales, tolls, etc</string>
    <string name="settlement_records">Settlement Records</string>
    <string name="statistics">Statistics &amp; Data</string>
    <string name="update_odometer">Update Odometer</string>
    <string name="payout_info">*Setup both the percentage of gross and/or cents per mile to be paid to the carrier and towards maintinence</string>
    <string name="def_entries_are_independant_and_should_not_include_diesel">*DEF entries are independent and should not include diesel</string>
    <string name="def">DEF</string>
    <string name="pct">PCT:</string>
    <string name="equipment_maintenance">Equipment Maintenance</string>
    <string name="cpm">CPM:</string>
    <string name="carrier_authority_payout">Carrier/Authority Payout</string>
    <string name="fixed_expense">Fixed Expense</string>
    <string name="please_update">Update Available</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="date">Sorting by date</string>
    <string name="entry">Sorting by entry</string>
    <string name="amount">Sorting by cost</string>
    <string name="revenue">Sorting by revenue</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="odometer">Odometer</string>
    <string name="calculated_averages">Calculated Averages</string>
    <string name="backup_and_restore"><![CDATA[Backup & Restore]]></string>
    <string name="backup_description">Back up your database to Payroll servers. Useful when switching to a new phone for example, or simply for peace of mind. There will be a one time small fee for unlimited use.</string>
    <string name="equipment">Equipment</string>
    <string name="_44_5">44.5</string>
    <string name="_555_55">$555.55</string>
    <string name="fuel_price">Fuel Price</string>
    <string name="_123_45">123.45</string>
    <string name="_3_23">$3.23</string>
</resources>
