<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/settlement_group"
        android:checkableBehavior="none"
        android:enabled="false">
        <item
            android:id="@+id/new_settlement"
            android:icon="@drawable/new_settlement"
            android:title="@string/new_settlement" />
    </group>
    <group
        android:id="@+id/equipment_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/equipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/equipment_icon"
            android:title="@string/equipment" />

        <item
            android:id="@+id/maintenance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/maintenance"
            android:title="Maintenance" />
    </group>
    <group
        android:id="@+id/navigation_group"
        android:checkableBehavior="single"
        android:enabled="false">
        <item
            android:id="@+id/overview"
            android:icon="@drawable/app_icon"
            android:title="@string/overview" />
        <item
            android:id="@+id/loads"
            android:icon="@drawable/overview"
            android:title="@string/loads" />
        <item
            android:id="@+id/fuel"
            android:icon="@drawable/fuel"
            android:title="@string/fuel" />
        <item
            android:id="@+id/fixed"
            android:icon="@drawable/fixed"
            android:title="@string/fixed" />
        <item
            android:id="@+id/miscellaneous"
            android:icon="@drawable/miscellaneous"
            android:title="@string/miscellaneous" />
        <item
            android:id="@+id/payout"
            android:icon="@drawable/payout"
            android:title="@string/payout" />
    </group>
    <group
        android:id="@+id/record_group"
        android:checkableBehavior="single"
        android:enabled="false">
        <item
            android:id="@+id/records"
            android:icon="@drawable/records_black"
            android:title="@string/settlement_records" />

        <item
            android:id="@+id/statistics"
            android:icon="@drawable/statistics"
            android:title="@string/statistics" />
    </group>
    <group
        android:id="@+id/backup_group"
        android:checkableBehavior="single"
        android:enabled="false">
        <item
            android:id="@+id/backup"
            android:icon="@drawable/backup_black"
            android:title="@string/backup_and_restore" />
    </group>
</menu>