<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:focusable="true"
    tools:context=".NewLoadFragment">

    <EditText
        android:id="@+id/odometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:ems="7"
        android:gravity="center"
        android:hint="@string/_123456"
        android:inputType="number"
        android:padding="@dimen/common_margin"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView16" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/current_odometer"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintEnd_toEndOf="@+id/odometer"
        app:layout_constraintStart_toStartOf="@+id/odometer"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/square_border_filled"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="@dimen/large_margin"
        android:paddingTop="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin"
        android:paddingBottom="@dimen/common_margin"
        android:text="@string/update_odometer"
        android:textColor="@color/colorText"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:background="@drawable/square_border_filled"
        android:gravity="center"
        android:padding="@dimen/common_margin"
        android:text="@string/finish"
        android:textColor="@color/colorText"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odometer" />
</androidx.constraintlayout.widget.ConstraintLayout>