<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/large_margin"
        android:paddingTop="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin"
        android:paddingBottom="@dimen/common_margin"
        android:text="@string/fixed_expense"
        android:textColor="@color/colorText"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:gravity="center_vertical"
        android:textColor="@color/colorText"
        android:textSize="@dimen/large_text_size" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dialog"
        android:layout_below="@id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/common_margin"
            android:isScrollContainer="true"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:background="@drawable/custom_edit_text"
                android:ems="4"
                android:gravity="center"
                android:hint="@string/dollar_signs"
                android:inputType="number|numberDecimal"
                android:padding="@dimen/common_margin"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <EditText
                android:id="@+id/label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_edit_text"
                android:gravity="top|left"
                android:hint="@string/description"
                android:inputType="textAutoCorrect|textAutoComplete|textCapWords"
                android:maxLines="1"
                android:minLines="1"
                android:padding="@dimen/common_margin"
                android:nextFocusDown="@id/cost"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintEnd_toStartOf="@+id/cost"
                app:layout_constraintStart_toStartOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:max="52"
                android:progress="21"
                android:progressTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/scroller" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/item_label"
                android:textColor="@color/colorTextBlack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thisYear" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/cost"
                android:textColor="@color/colorTextBlack"
                app:layout_constraintEnd_toEndOf="@+id/cost"
                app:layout_constraintStart_toStartOf="@+id/cost"
                app:layout_constraintTop_toTopOf="@+id/textView17" />

            <TextView
                android:id="@+id/thisYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/_2018"
                android:textColor="@color/colorTextBlack"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <TextView
                android:id="@+id/weekView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textColor="@color/colorTextBlack"
                android:textSize="12dp"
                app:layout_constraintEnd_toStartOf="@+id/nextYear"
                app:layout_constraintStart_toEndOf="@+id/thisYear"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <TextView
                android:id="@+id/nextYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/_2020"
                android:textColor="@color/colorTextBlack"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_weight="1"
            android:background="@drawable/square_border"
            android:gravity="center"
            android:padding="@dimen/common_margin"
            android:text="@string/cancel"
            android:textColor="@color/colorText"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_weight="1"
            android:background="@drawable/square_border"
            android:gravity="center"
            android:padding="@dimen/common_margin"
            android:text="@string/finish"
            android:textColor="@color/colorText"
            android:textSize="22dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>